# inloop

./: .ackrc  .coveragerc  .editorconfig  .env  .env.develop  .env_develop  .env_development  .env_tests  .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .mailmap  .pylintrc  .travis.yml  CONTRIBUTING.md  DEPLOY.md  Dockerfile  HACKING.md  INSTALL.md  Makefile  Pipfile  Procfile  Procfile.dev  README.md  Vagrantfile  build-requirements.txt  coverage.py  csslint.sh  db.sqlite3  deploy.py  dev-requirements.txt  inloop.sublime-project  jshint.sh  manage.py  noxfile.py  package-lock.json  package.json  pre-commit.sh  (+15 more)
.github/workflows/: backend_tests.yml  ci.yml
accounts/: admin.py  forms.py  models.py  tests.py  urls.py  validators.py  views.py
accounts/migrations/: 0001_initial.py  0001_squashed_0006_auto_20150625_1428.py  0002_auto_20150117_1901.py  0002_auto_20150606_2024.py  0003_auto_20150126_1831.py  0003_userprofile_key_expires.py  0004_auto_20150327_1520.py  0004_auto_20150607_1731.py  0005_auto_20150618_1020.py  0005_userprofile_activation_key.py  0006_auto_20150625_1428.py
assets/css/: editor-v2.css  editor.css  inloop.css  syntax.css
assets/favicons/: site.webmanifest
assets/js/: ace-theme-inloop.js  anchor.min.js  archive-status.js  autoreveal.js  editor-v2.js  editor.js  inloop.js  jquery.timeago.js  logout.js  notifications.js  prism-java.min.js  prism.js  solution-status.js  solutionstatus.js  statistics.histograms.js  upload-form.js  upload_form.js
checker/: workflow.py
docs/: DEPLOY.md  DOCKER_SETUP.md  HACKING.md  INSTALL.md  deployment-guide.md  deployment.md  developer-guide.md  git_troubleshouting.md  installation.md  installation_notes.md  static-assets.md  task_repository_manual.md
docs/figures/: architecture.xml
etc/init/: docker-facl.conf
etc/nginx/: gunicorn_proxy_params  secure_http_headers
home/: urls.py  views.py
home/templates/: about.html
inloop/: __init__.py  context_processors.py  debug_urls.py  decorators.py  gunicorn_config.py  middleware.py  settings.py  tests.py  urls.py  utils.py  version.py  views.py  wsgi.py
inloop/accounts/: admin.py  constance.py  forms.py  middleware.py  models.py  tasks.py  test_validator.py  tests.py  urls.py  validators.py  views.py
inloop/common/: context_processors.py  middleware.py  sendfile.py  validators.py
inloop/core/: sendfile.py  test_sendfile.py  tests.py  utils.py  version.py
inloop/fixtures/: sites.json
inloop/gh_import/: git.py  tasks.py  tests.py  urls.py  utils.py  views.py
inloop/gitload/: apps.py  constance.py  loader.py  repo.py  secrets.py  signals.py  tasks.py  urls.py  views.py
inloop/grading/: admin.py  copypasta.py  models.py  tud.py
inloop/settings/: .gitignore  base.py  development.py  production.py  production.py-dist
inloop/solutions/: admin.py  constance.py  editor_views.py  models.py  signals.py  statistics.py  urls.py  validators.py  views.py
inloop/statistics/: forms.py  tests.py  urls.py  validators.py  views.py
inloop/tasks/: admin.py  checker.py  constance.py  docker.py  filesystem_utils.py  forms.py  models.py  test_base.py  test_docker.py  test_docker_subproc.py  test_views.py  tests.py  urls.py  validators.py  views.py  views_new.py
inloop/templates/: 404.html  500.html  base.html  base_site.html  stripped_base.html
inloop/testrunner/: __init__.py  admin.py  apps.py  models.py  runner.py  signals.py  tasks.py
js/: inloop.js
less/: bootstrap.less  inloop-base.less  inloop.less  variables.less
prktmt/: settings.py  urls.py  views.py  wsgi.py
requirements/: base.txt  dev.txt  development.txt  lint.in  lint.txt  main.in  main.txt  prod.in  prod.txt  production.txt  test.txt  tools.in  tools.txt
runtime/: command.py
runtimes/: java.py  runner.py  tests.py
setup_tools/: install.py  make_conf.py  pq_init.py  provision.py  provision_test.py  push_deploy.py  update_profile.sh
static/: Gruntfile.coffee  HOWTO.md  README.md  offline.html  package.json
static/css/: base.css
support/: commit_msg.py  inloop_env  offline.html  postgres-setup.py  pre-commit.sh  precise-setup.sh  user_fixtures.json
support/configs/: inloop-queue.conf.template  inloop-setup.conf.template  inloop-web.conf.template  (+2 more)
tasks/: admin.py  filesystem_utils.py  forms.py  models.py  tests.py  upload_utils.py  urls.py  validators.py  views.py
templates/: 404.html  500.html  base.html  stripped_base.html
tests/: .env  backends.py  decorators.py  settings.py  test_grading.py  test_runtimes.py  test_statistics.py  test_views.py  tools.py
tools/: ci-requirements.txt  nu-html-validator.sh
(+1770 files in other folders)
