[tool.poetry]
name = "inloop"
version = "0.1.0"
description = "A web application to manage online programming assignments"
authors = [
    "Martin Morgenstern <mail@mmorgenstern.net>",
    "Philipp Matthes <github@philippmatth.es>"
]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.6"
defusedxml = "^0.6.0"
django = "~1.11"
django-constance = "^2.6.0"
django-environ = "^0.4.5"
django-extensions = "^2.2.8"
django-redis = "^4.11.0"
django-registration = "^2.5.2"
django-widget-tweaks = "^1.4.5"
gunicorn = "^20.0.4"
huey = "^1.11.0"
markdown = "^2.6.11"
psycopg2 = "^2.8.4"
redis = "^3.4.1"
setproctitle = "^1.1.10"

[tool.poetry.dev-dependencies]
coverage = "^5.0.3"
django-debug-toolbar = "^2.2"
django-html-validator = "^0.5.1"
flake8 = "^3.7.9"
flake8-docstrings = "^1.5.0"
honcho = "^1.0.1"
ipython = "^7.13.0"
isort = "^4.3.21"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
