[tool.poetry]
name = "inloop"
version = "0.1.0"
description = "A web application to manage online programming assignments"
authors = [
    "Martin Morgenstern <mail@mmorgenstern.net>",
    "Philipp Matthes <github@philippmatth.es>"
]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"
defusedxml = "^0.7.1"
Django = "^4.0.3"
django-constance = "^2.6.0"
django-environ = "^0.8.1"
django-extensions = "^3.1.0"
django-redis = "^5.0.0"
django-registration = "^3.1"
django-widget-tweaks = "^1.4.5"
gunicorn = "^20.0.4"
huey = "^2.3.0"
Markdown = "^3.3.3"
psycopg2 = "^2.8.4"
redis = "^4.2.2"
setproctitle = "^1.1.10"

[tool.poetry.dev-dependencies]
coverage = "^6.2"
django-debug-toolbar = "^3.2"
django-html-validator = "^0.5.1"
flake8 = "^4.0.1"
flake8-docstrings = "^1.5.0"
honcho = "^1.0.1"
ipython = "^7.13.0"
isort = "~5.8.0"
flake8-isort = "~4.1.1"
black = "^22.3.0"
flake8-black = "^0.3.2"
flake8-bugbear = "^22.3.23"
flake8-annotations = "^2.4.1"
pytype = {version = "*", python = ">=3.7,<3.9"}
typeguard = "^2.10.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"
line_length = 99
skip_gitignore = true
skip = ["migrations"]
known_first_party = "inloop"
known_django = "django"
known_tests = "tests"
sections = [
    "FUTURE",
    "STDLIB",
    "DJANGO",
    "THIRDPARTY",
    "FIRSTPARTY",
    "TESTS",
    "LOCALFOLDER"
]

[tool.coverage.run]
branch = true
source = ["inloop"]
data_file = ".coverage.dat"

[tool.coverage.report]
omit = ["*/migrations/*", "inloop/urls_debug.py"]

[tool.coverage.html]
directory = "htmlcov"
title = "INLOOP test coverage report"

[tool.black]
line-length = 99
exclude = '(/(\.git|\.nox|\.venv|media)|migrations)/'
